Fixed image border-radius on mobile layout

--- a/index.scss
+++ b/index.scss
@@ -142,6 +142,14 @@ body {
     max-width: 327px;
     grid-template-columns: 1fr;
 
+    &-image {
+      img {
+        border-radius: 0;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
+    }
+
     &-content {
       &-header {
         font-size: 1.3em;
